--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -864,7 +864,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>9</number>
+        <number>4</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -874,8 +874,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>364</width>
-          <height>360</height>
+          <width>284</width>
+          <height>141</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1736,7 +1736,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>413</width>
+          <width>350</width>
           <height>527</height>
          </rect>
         </property>
@@ -2042,8 +2042,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>264</width>
-          <height>360</height>
+          <width>224</width>
+          <height>266</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2495,7 +2495,7 @@
           <x>0</x>
           <y>0</y>
           <width>299</width>
-          <height>397</height>
+          <height>430</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2510,9 +2510,9 @@
           </widget>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_19">
+          <layout class="QVBoxLayout" name="verticalLayout_16">
            <item>
-            <widget class="QLabel" name="label_tp_ra">
+            <widget class="QLabel" name="label_tp_dec">
              <property name="font">
               <font>
                <weight>75</weight>
@@ -2538,7 +2538,7 @@ background-color: rgb(0, 0, 0);</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_tp_dec">
+            <widget class="QLabel" name="label_tp_ra">
              <property name="font">
               <font>
                <weight>75</weight>
@@ -3067,7 +3067,7 @@ background-color: rgb(0, 0, 0);</string>
           <x>0</x>
           <y>0</y>
           <width>279</width>
-          <height>360</height>
+          <height>329</height>
          </rect>
         </property>
         <attribute name="label">
@@ -3271,7 +3271,7 @@ background-color: rgb(0, 0, 0);</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>237</width>
+          <width>157</width>
           <height>431</height>
          </rect>
         </property>
@@ -3374,8 +3374,8 @@ background-color: rgb(0, 0, 0);</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>254</width>
-          <height>360</height>
+          <width>100</width>
+          <height>30</height>
          </rect>
         </property>
         <attribute name="label">
