--- a/resource.qrc
+++ b/resource.qrc
@@ -151,5 +151,6 @@
         <file>res/tracking_dialog.png</file>
         <file>res/add_to_list.png</file>
         <file>res/empty_list.png</file>
+        <file>res/sh_shower.png</file>
     </qresource>
 </RCC>
