--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -101,8 +101,8 @@
       <rect>
        <x>80</x>
        <y>281</y>
-       <width>231</width>
-       <height>153</height>
+       <width>261</width>
+       <height>118</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -234,6 +234,19 @@
            </property>
           </widget>
          </item>
+         <item row="4" column="0">
+          <spacer name="verticalSpacer_10">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </item>
       </layout>
@@ -284,10 +297,10 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>150</y>
+       <x>460</x>
+       <y>140</y>
        <width>172</width>
-       <height>181</height>
+       <height>187</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -299,7 +312,7 @@
      <property name="minimumSize">
       <size>
        <width>172</width>
-       <height>181</height>
+       <height>187</height>
       </size>
      </property>
      <property name="font">
@@ -432,6 +445,19 @@
           </layout>
          </item>
          <item>
+          <spacer name="verticalSpacer_12">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_15">
            <item>
             <spacer name="horizontalSpacer_3">
@@ -462,19 +488,6 @@
           </layout>
          </item>
         </layout>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_6">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -596,6 +609,7 @@
     <addaction name="actionAsteroid"/>
     <addaction name="actionComet"/>
     <addaction name="actionSatellite_2"/>
+    <addaction name="actionLunar_features"/>
     <addaction name="separator"/>
     <addaction name="actionPosition"/>
     <addaction name="actionTelescope"/>
@@ -865,7 +879,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>6</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -1228,7 +1242,7 @@
           <x>0</x>
           <y>0</y>
           <width>302</width>
-          <height>576</height>
+          <height>547</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1236,14 +1250,24 @@
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,0">
+          <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,0,0">
            <item>
             <widget class="QPushButton" name="pushButton_2">
              <property name="statusTip">
               <string>Open DSS file</string>
              </property>
              <property name="text">
-              <string>Open DSS file...</string>
+              <string>Open...</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_3">
+             <property name="toolTip">
+              <string>Load all DSS files on screen </string>
+             </property>
+             <property name="text">
+              <string>Load all images on screen</string>
              </property>
             </widget>
            </item>
@@ -1262,16 +1286,6 @@
             </widget>
            </item>
           </layout>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_3">
-           <property name="toolTip">
-            <string>Load all DSS files on screen </string>
-           </property>
-           <property name="text">
-            <string>Load all images on screen</string>
-           </property>
-          </widget>
          </item>
          <item>
           <widget class="QLabel" name="label">
@@ -2494,7 +2508,7 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>-70</y>
+          <y>0</y>
           <width>299</width>
           <height>430</height>
          </rect>
@@ -5678,6 +5692,11 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="toolTip">
     <string>Show/hide meteor showers</string>
+   </property>
+  </action>
+  <action name="actionLunar_features">
+   <property name="text">
+    <string>Lunar features...</string>
    </property>
   </action>
  </widget>
