--- a/csetting.ui
+++ b/csetting.ui
@@ -541,6 +541,9 @@
                </item>
                <item row="7" column="0">
                 <widget class="QDoubleSpinBox" name="doubleSpinBox_43">
+                 <property name="suffix">
+                  <string>°</string>
+                 </property>
                  <property name="decimals">
                   <number>0</number>
                  </property>
